--- a/styles/styles.css
+++ b/styles/styles.css
@@ -596,7 +596,7 @@ body {
 /* Filter */
 
 .filter-wrapper {
-  padding: 35px 70px 65px;
+  padding: 35px 70px 67px;
   background-color: #4e86ab;
   background-image: url("../images/catalog-background.jpg");
   background-repeat: no-repeat;
@@ -830,7 +830,7 @@ body {
 
 .select-control {
   width: 100%;
-  padding: 10px 18px;
+  padding: 12px 20px;
   padding-right: 40px;
   font-family: inherit;
   font-size: 18px;
@@ -1019,7 +1019,6 @@ body {
 
 .pagination-link:not(.pagination-current, .dots):hover,
 .pagination-link:not(.pagination-current, .dots):focus {
-  outline: none;
   border: 1px solid #82B3D3;
   background-color: #68A2CA;
   color: #FFFFFF;
@@ -1069,11 +1068,6 @@ body {
   border-radius: 4px;
   border: none;
   cursor: pointer;
-}
-
-.button:hover,
-.button:focus {
-  outline: none;
 }
 
 .button:active {
@@ -1147,6 +1141,7 @@ body {
 }
 
 .button-transparent:focus {
+  outline: none;
   border: 3px solid #68A2CA;
   opacity: 1;
 }
@@ -1187,4 +1182,148 @@ body {
   background-color: #E5E5E5;
   color: rgba(255, 255, 255, 0.3);
   cursor: default;
+}
+
+/* Modal */
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.80);
+}
+
+.modal-container-close {
+  display: none;
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  padding: 64px 70px;
+  background-color: #ffffff;
+  border-radius: 30px;
+  box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 0.15);
+}
+
+.modal-search {
+  width: 717px;
+}
+
+.modal-close-button {
+  position: absolute;
+  padding: 0;
+  right: 52px;
+  top: 64px;
+  width: 52px;
+  height: 52px;
+  background: #F2F2F2;
+  border: none;
+  border-radius: 50%;
+  background-image: url("../images/icons/close.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
+
+.modal-close-button:hover {
+  background-color: #E6E6E6;
+}
+
+.modal-close-button:focus {
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+}
+
+.modal-content {
+  max-width: 577px;
+}
+
+.modal-title {
+  margin-bottom: 64px;
+  text-align: left;
+}
+
+.search-form {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: repeat(3, 48px) 60px;
+  row-gap: 48px;
+}
+
+.search-field {
+  display: grid;
+  grid-template-columns: 122px 1fr;
+  column-gap: 15px;
+  row-gap: 4px;
+}
+
+.search-field-date {
+  grid-column: 1/-1;
+}
+
+.search-field-label {
+  color: #000000;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  text-transform: capitalize;
+  align-self: center;
+}
+
+.field {
+  border: none;
+  background-color: #F2F2F2;
+  border-radius: 4px;
+  font-weight: 700;
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 24px;
+  padding: 12px 20px;
+  outline: none;
+  appearance: none;
+}
+
+.field:hover {
+  background-color: #E6E6E6;
+}
+
+.field:focus {
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+}
+
+.field::placeholder {
+  color: #000000;
+  opacity: 0.6;
+}
+
+.field-message {
+  grid-column: 2/-1;
+  font-size: 16px;
+  padding: 0 20px;
+}
+
+.field-message-error {
+  color: #FF5757;
+}
+
+.search-field-people {
+  grid-row: 3/4;
+  width: 200px;
+}
+
+
+.search-field-button {
+  grid-column: 1/-1;
+  border-radius: 10px;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.search-field-button:active {
+  background-color: #68A2CA;
 }
