--- a/styles/styles.css
+++ b/styles/styles.css
@@ -179,6 +179,7 @@ body {
   top: 11px;
   right: 5px;
   min-width: 20px;
+  max-width: 30px;
   height: 20px;
   padding: 5px 4px;
   font-size: 10px;
@@ -207,17 +208,21 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center bottom;
-  text-align:center;
+  text-align: center;
 }
 
 .hero::after {
-  content: url("../images/hero-divider.svg");
+  content: "";
   position: absolute;
   bottom: 0;
   left: 0;
   display: block;
   width: 1200px;
-  height: 57px
+  height: 57px;
+  background-image: url("../images/hero-divider.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center bottom;
 }
 
 /* Reasons */
@@ -270,9 +275,12 @@ body {
   height: 2px;
   position: absolute;
   bottom: -32px;
-  left: 57px;
   background-color: #000000;
   opacity: 0.3;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
 }
 
 .reason-item-big .reason-name,
@@ -1238,6 +1246,11 @@ body {
   outline: 3px solid #83B3D3;
 }
 
+.modal-close-button:active {
+  /* opacity: 0.3; */
+  outline: none;
+}
+
 .modal-content {
   max-width: 577px;
 }
@@ -1312,10 +1325,97 @@ body {
 }
 
 .search-field-people {
-  grid-row: 3/4;
-  width: 200px;
+  max-width: 250px;
 }
 
+.search-field-people:nth-child(2n) {
+  justify-self: end;
+}
+
+.wrapper-field-count {
+  display: grid;
+  grid-template-columns: 40px 31px 40px;
+}
+
+.number-button {
+  background: #F2F2F2;
+  border-radius: 4px 0 0 4px;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  outline: none;
+}
+
+
+
+.tooltip {
+  position: absolute;
+  margin-top: 0;
+  margin-left: 10px;
+  width: 26px;
+  height: 26px;
+}
+
+.tooltip-toggle {
+  border: none;
+  padding: 0;
+  margin: 0;
+  display: block;
+  background-color: #83B3D3;
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/icons/tooltip.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.tooltip-text {
+  width: 256px;
+  min-height: 143px;
+  position: absolute;
+  padding: 20px 22px;
+  top: 100%;
+  margin-top: 14px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+  color: #FFFFFF;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: none;
+  font-weight: 400;
+  border-radius: 10px;
+  background-color: #333333;
+  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.30);
+  display: none;
+}
+
+.tooltip-toggle:hover + .tooltip-text,
+.tooltip-toggle:focus + .tooltip-text {
+  display: block;
+}
+
+.tooltip-text:after {
+  content:'';
+  background-image: url("../images/icons/tooltip-arrow.svg");
+  width: 19px;
+  height: 9px;
+  position: absolute;
+  bottom: 100%;
+  left:0;
+  right:0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.field-label-icon {
+  position: relative;
+  padding-right: 26px;
+  padding-left: 7px;
+}
 
 .search-field-button {
   grid-column: 1/-1;
