--- a/8/styles/styles.css
+++ b/8/styles/styles.css
@@ -94,7 +94,7 @@ body {
 .navigation-logo {
   max-width: 140px;
   margin-right: 30px;
-  z-index: 5;
+  z-index: 1;
 }
 
 .logo {
@@ -276,7 +276,7 @@ body {
   position: absolute;
   bottom: -32px;
   background-color: #000000;
-  opacity: 0.3;
+  opacity: .3;
   margin-left: auto;
   margin-right: auto;
   left: 0;
@@ -664,7 +664,7 @@ body {
 }
 
 .control:hover {
-  opacity: 0.6;
+  opacity: .6;
 }
 
 .control-input:focus + .control-mark {
@@ -673,7 +673,7 @@ body {
 }
 
 .control:active {
-  opacity: 0.3;
+  opacity: .3;
 }
 
 .control-input:disabled + .control-mark {
@@ -862,7 +862,7 @@ body {
 .select-control:disabled {
   border: 2px solid #000000;
   color: #000000;
-  opacity: 0.3;
+  opacity: .3;
 }
 
 .hotels-view-buttons {
@@ -1145,7 +1145,7 @@ body {
 }
 
 .button-transparent:hover {
-  opacity: 0.6;
+  opacity: .6;
 }
 
 .button-transparent:focus {
@@ -1156,12 +1156,12 @@ body {
 
 .button-transparent:active {
   border: 3px solid transparent;
-  opacity: 0.3;
+  opacity: .3;
 }
 
 .button-transparent:disabled {
   background-color: transparent;
-  opacity: 0.1;
+  opacity: .1;
 }
 
 .button-favorite {
@@ -1202,6 +1202,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(242, 242, 242, 0.80);
+  z-index: 2;
 }
 
 .modal-container-close {
@@ -1231,10 +1232,18 @@ body {
   background: #F2F2F2;
   border: none;
   border-radius: 50%;
+  cursor: pointer;
+}
+
+.modal-close-button::after {
+  content: "";
   background-image: url("../images/icons/close.svg");
   background-repeat: no-repeat;
   background-position: center;
-  cursor: pointer;
+  width: 14px;
+  height: 14px;
+  margin: auto;
+  display: block;
 }
 
 .modal-close-button:hover {
@@ -1247,8 +1256,11 @@ body {
 }
 
 .modal-close-button:active {
-  /* opacity: 0.3; */
   outline: none;
+}
+
+.modal-close-button:active::after {
+  opacity: .3;
 }
 
 .modal-content {
@@ -1263,8 +1275,10 @@ body {
 .search-form {
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: repeat(3, 48px) 60px;
+  grid-template-rows: repeat(3, min-content) 60px;
+  /* grid-template-rows: repeat(3, 48px) 60px; */
   row-gap: 48px;
+  word-wrap: break-word;
 }
 
 .search-field {
@@ -1276,6 +1290,18 @@ body {
 
 .search-field-date {
   grid-column: 1/-1;
+  position: relative;
+}
+
+.search-field-date::after {
+  content: "";
+  background-image: url(../images/icons/calendar.svg);
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .search-field-label {
@@ -1295,9 +1321,8 @@ body {
   font-family: inherit;
   font-size: 18px;
   line-height: 24px;
-  padding: 12px 20px;
+  padding: 12px 45px 12px 20px;
   outline: none;
-  appearance: none;
 }
 
 .field:hover {
@@ -1311,13 +1336,15 @@ body {
 
 .field::placeholder {
   color: #000000;
-  opacity: 0.6;
+  opacity: .6;
 }
 
 .field-message {
   grid-column: 2/-1;
   font-size: 16px;
   padding: 0 20px;
+  position: absolute;
+  bottom: -25px;
 }
 
 .field-message-error {
@@ -1335,19 +1362,62 @@ body {
 .wrapper-field-count {
   display: grid;
   grid-template-columns: 40px 31px 40px;
+  height: 48px;
 }
 
-.number-button {
+.count-button {
   background: #F2F2F2;
-  border-radius: 4px 0 0 4px;
   border: none;
   display: flex;
   align-items: center;
   justify-content: center;
   outline: none;
+  cursor: pointer;
+  padding: 14px 10px;
 }
 
+.count-button-minus {
+  border-radius: 4px 0 0 4px;
+}
 
+.count-button-plus {
+  border-radius: 0 4px 4px 0;
+}
+
+.count-button-icon {
+  fill: #756157;
+  opacity: .3;
+}
+
+.count-button:hover .count-button-icon,
+.count-button:focus .count-button-icon {
+  fill: #000000;
+  opacity: 1;
+}
+
+.count-button:focus .count-button-icon {
+  outline: 3px solid #82B3D3;
+  border-radius: 4px;
+}
+
+.count-button:active .count-button-icon {
+  outline: none;
+  opacity: .2;
+}
+
+.count-field {
+  border-radius: 0;
+  padding: 14px 4px;
+  text-align: center;
+  outline: none;
+  z-index: 1;
+}
+
+.count-field::-webkit-outer-spin-button,
+.count-field::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
 
 .tooltip {
   position: absolute;
@@ -1380,7 +1450,7 @@ body {
   margin-top: 14px;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 1;
+  z-index: 3;
   color: #FFFFFF;
   font-size: 16px;
   line-height: 20px;
@@ -1409,7 +1479,6 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-
 
 .field-label-icon {
   position: relative;
