--- a/8/styles/styles.css
+++ b/8/styles/styles.css
@@ -179,7 +179,6 @@ body {
   top: 11px;
   right: 5px;
   min-width: 20px;
-  max-width: 30px;
   height: 20px;
   padding: 5px 4px;
   font-size: 10px;
@@ -187,7 +186,7 @@ body {
   text-align: center;
   color: #FFFFFF;
   background-color: #7DB54F;
-  border-radius: 50%;
+  border-radius: 12px;
 }
 
 /* Main */
@@ -221,7 +220,6 @@ body {
   height: 57px;
   background-image: url("../images/hero-divider.svg");
   background-repeat: no-repeat;
-  background-size: cover;
   background-position: center bottom;
 }
 
@@ -454,8 +452,19 @@ body {
 
 .subscription-email:focus {
   outline: none;
-  border: 3px solid #83B3D3;
+  border-color: #83B3D3;
   background-color: #E6E6E6;
+}
+
+.subscription-email:invalid {
+  border-color: #FF5757;
+}
+
+.subscription-email:disabled,
+.subscription-email:disabled:hover {
+  border-color: #E6E6E6;
+  background-color: #E6E6E6;
+  opacity: .5;
 }
 
 /* Footer */
@@ -532,6 +541,11 @@ body {
 
 .footer-logo:active {
   fill: rgba(117, 97, 87, 0.3);
+}
+
+.social-link.link-disabled,
+.footer-logo.link-disabled {
+  fill: #FFFFFF;
 }
 
 /* Catalog */
@@ -661,6 +675,7 @@ body {
 
 .control:hover {
   opacity: .6;
+  cursor: pointer;
 }
 
 .control-input:focus + .control-mark {
@@ -670,11 +685,6 @@ body {
 
 .control:active {
   opacity: .3;
-}
-
-.control-input:disabled + .control-mark {
-  background-color: #E6E6E6;
-  color:#E6E6E6;
 }
 
 .control-input[type="checkbox"]:checked + .control-mark::before {
@@ -697,6 +707,22 @@ body {
   left: 5px;
 }
 
+.control-input:disabled + .control-mark,
+.control-input:disabled:hover + .control-mark,
+.control-input:disabled:active + .control-mark {
+  background-color: #E5E5E5;
+  opacity: .1;
+  cursor: default;
+}
+
+.control-input:disabled ~ .control-label,
+.control-input:disabled:hover   ~ .control-label,
+.control-input:disabled:active ~ .control-mark {
+  color: rgba(255, 255, 255, 0.3);
+  cursor: default;
+  opacity: .1;
+}
+
 .control-label {
   line-height: 23px;
 }
@@ -709,6 +735,7 @@ body {
 .input-wrapper {
   display: flex;
   margin-bottom: 44px;
+  gap: 2px;
 }
 
 .catalog-filter-label {
@@ -752,8 +779,17 @@ body {
   outline: 3px solid #83B3D3;
 }
 
+.catalog-filter-input:invalid {
+  outline-color: #FF5757;
+}
+
+.catalog-filter-input:disabled,
+.catalog-filter-input:disabled:hover {
+  background-color: #E6E6E6;
+  opacity: .5;
+}
+
 .min-price {
-  margin-right: 2px;
   border-radius: 4px 0 0 4px;
 }
 
@@ -854,11 +890,11 @@ body {
 .select-control:hover,
 .select-control:focus {
   outline: none;
-  border: 2px solid #68A2CA;
+  border-color: #68A2CA;
 }
 
 .select-control:disabled {
-  border: 2px solid #000000;
+  border-color: #000000;
   color: #000000;
   opacity: .3;
 }
@@ -887,11 +923,18 @@ body {
 
 .hotels-view:focus {
   outline: none;
-  border: 2px solid #68A2CA;
+  border-color: #68A2CA;
 }
 
 .hotels-view:active {
-  border: 2px solid #000000;
+  border-color: #000000;
+}
+
+.hotels-view:disabled,
+.hotels-view:disabled:hover {
+  background-color: #E5E5E5;
+  cursor: default;
+  border-color: #E5E5E5;
 }
 
 .hotels-view:first-child {
@@ -1085,7 +1128,9 @@ body {
   color: rgba(255, 255, 255, 0.3);
 }
 
-.button:disabled {
+.button:disabled,
+.button:disabled:hover,
+.button:disabled:active {
   background-color: #E5E5E5;
   color: rgba(255, 255, 255, 0.3);
   cursor: default;
@@ -1153,12 +1198,12 @@ body {
 
 .button-transparent:focus {
   outline: none;
-  border: 3px solid #68A2CA;
+  border-color: #68A2CA;
   opacity: 1;
 }
 
 .button-transparent:active {
-  border: 3px solid transparent;
+  border-color: transparent;
   opacity: .3;
 }
 
@@ -1178,7 +1223,6 @@ body {
 
 .button-favorite:active {
   background-color: #7DB54F;
-  color: rgba(255, 255, 255, 0.3);
 }
 
 .search-field-button:active {
@@ -1193,10 +1237,13 @@ body {
   background-color: rgba(131, 179, 211, 0.2);
 }
 
-.link-disabled {
+.link-disabled,
+.link-disabled:hover,
+.link-disabled:focus {
   background-color: #E5E5E5;
   color: rgba(255, 255, 255, 0.3);
   cursor: default;
+  outline: none;
 }
 
 /* Modal */
@@ -1236,7 +1283,7 @@ body {
   top: 64px;
   width: 52px;
   height: 52px;
-  background: #F2F2F2;
+  background-color: #F2F2F2;
   border: none;
   border-radius: 50%;
   cursor: pointer;
@@ -1268,6 +1315,13 @@ body {
 
 .modal-close-button:active::after {
   opacity: .3;
+}
+
+.modal-close-button:disabled,
+.modal-close-button:disabled:hover {
+  background-color: #E6E6E6;
+  opacity: .5;
+  cursor: default;
 }
 
 .modal-content {
@@ -1335,6 +1389,16 @@ body {
   outline: 3px solid #83B3D3;
 }
 
+.field:invalid {
+  outline-color: #FF5757;
+}
+
+.field:disabled,
+.field:disabled:hover {
+  background-color: #E6E6E6;
+  opacity: .5;
+}
+
 .field-message {
   grid-column: 2/-1;
   font-size: 16px;
@@ -1347,11 +1411,11 @@ body {
 
 .search-field-people {
   max-width: 250px;
+  align-self: start;
 }
 
 .search-field-people:nth-child(2n) {
   justify-self: end;
-  align-self: start;
 }
 
 .wrapper-field-count {
@@ -1398,6 +1462,13 @@ body {
 .count-button:active .count-button-icon {
   outline: none;
   opacity: .2;
+}
+
+.count-button:disabled .count-button-icon,
+.count-button:disabled:hover .count-button-icon {
+  fill: #000000;
+  opacity: .3;
+  cursor: default;
 }
 
 .count-field {
